Bug 1623034 - Changed sQuit from gboolean to mozilla::Atomic<gboolean>. r=mhowell

Differential Revision: https://phabricator.services.mozilla.com/D67666